# zainabhina05-png-CampusConnect

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES_TO_CREATE.md  README.md  SECURITY.md  USER_MENTIONS_FEATURE.md  commitlint.config.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  typecheck-errors.txt  vite.config.events.ts  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md
.github/scripts/: comments.js  constants.js  issue-comments.js
.github/workflows/: 05-pr-check.yml  06-pr-merged.yml  08-welcome.yml  10-pr-status-monitor.yml  ci.yml  pr-auto-merge.yml  pr-verification.yml
e2e/: login.spec.ts
graphql/: server.ts
graphql/resolvers/: index.ts
scripts/: create-new-issues.ts  notify_assignees.ps1  update-labels.ts
src/: App.tsx  styles.css  sw.ts
src/components/: CreateClubDialog.tsx  CreateEventDialog.tsx  EmptyBookmarks.tsx  EventCard.tsx  EventClusterMap.tsx  EventMap.tsx  EventRSVPButton.tsx  Layout.tsx  MaintenancePage.css  MaintenancePage.tsx  MarkdownEditor.tsx  MarkdownEditorWithMentions.tsx  MentionInput.tsx  MentionRenderer.tsx  NotFoundPage.tsx  PageWrapper.tsx  PullToRefresh.tsx  RoleBadge.tsx  ScrollToTop.tsx  ShortcutsModal.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  theme-provider.test.tsx  theme-provider.tsx
src/hooks/: usePresence.ts  (+2 more)
supabase/: config.ci.toml  config.toml  schema.sql  seed.sql
wasm/image-compressor/: Cargo.toml
(+158 files in other folders)
