[package]
name = "image-compressor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "File"
]
